--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
-<!-- Jumbotron -->
+{{!-- <!-- Jumbotron -->
 <div class="jumbotron">
   <h1>Authentication Tutorial!</h1>
   <p class="lead">Let's learn how to do authentication with node.</p>
   <p><a class="btn btn-lg btn-default" href="#" role="button">Get started today</a></p>
-</div>
+</div> --}}
 
 <!-- Example row of columns -->
 {{!-- <div class="row">
