--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,4 +1,4 @@
-<div class="masthead">
+{{!-- <div class="masthead">
   <h3 class="text-muted">Shoshiy Authentication</h3>
   <nav>
     <ul class="nav nav-justified">
@@ -13,4 +13,127 @@
       {{/if}}
     </ul>
   </nav>
-</div>
+</div> --}}
+
+<section id="section-1" class="section-1">
+        <div class="container space-b pt-1">
+            <div class="logo"><a href="/">Muzaffar Shoshiy</a></div>
+            <div class="header-contacts space-b">
+                <div class="location space-b"><a href=""><i class="fa-solid fa-location-dot"></i></a><p><a href="">Khushnavo str.,<br>Tashkent, Uzbekistan</a></p></div>
+                <div class="mobile space-b"><a href=""><i class="fa-solid fa-phone"></i></a><p><a href="tel:+998935689677">+998 93 568 96 77</a> <br><a href="tel:+998935779677">+998 93 577 96 77</a></p></div>
+                <div class="mass-media"><a href="https://web.telegram.org/z/#791213192"><i class="fa-brands fa-telegram"></i></a><a href="https://www.instagram.com/muzaffar_shoshiy/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <i class="fa-solid fa-magnifying-glass"></i></div>
+            </div>
+        </div>
+        <div class="container">
+            <nav class="nav space-b">
+
+                <ul class="sub-menu-hidden">
+                    <li class="sub-menu-item"><i class="fa-solid fa-bars"></i>
+
+                        <div class="sub-menu">
+                            <div class="indicator"><div class="indicator-arrow"></div></div>
+                            <ul class="sub-menu-list">
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Automatization factory</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Website development</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">AI</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Teaching</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Redeveloping</a></li>
+                            </ul>
+                        </div>
+
+                    </li>
+                </ul>
+
+                <ul class="list space-b">
+                    <li class="list-item"><a class="list-item-anchor" href="">services</a><span class="list-item-span"></span>
+                    
+                        <div class="sub-menu">
+                            <div class="indicator"><div class="indicator-arrow"></div></div>
+                            <ul class="sub-menu-list">
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Automatization factory</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Website development</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">AI</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Teaching</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Redeveloping</a></li>
+                            </ul>
+                        </div>
+                    
+                    </li>
+                    <li class="list-item"><a class="list-item-anchor" href="">gallery</a><span class="list-item-span"></span>
+                    
+                        <div class="sub-menu">
+                            <div class="indicator"><div class="indicator-arrow"></div></div>
+                            <ul class="sub-menu-list">
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Automatization factory</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Website development</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">AI</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Teaching</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Redeveloping</a></li>
+                            </ul>
+                        </div>
+
+                    </li>
+                    <li class="list-item"><a class="list-item-anchor" href="">video</a><span class="list-item-span"></span>
+                    
+                        <div class="sub-menu">
+                            <div class="indicator"><div class="indicator-arrow"></div></div>
+                            <ul class="sub-menu-list">
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Automatization factory</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Website development</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">AI</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Teaching</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Redeveloping</a></li>
+                            </ul>
+                        </div>
+
+                    </li>
+                    <li class="list-item"><a class="list-item-anchor" href="">FAQ</a><span class="list-item-span"></span></li>
+                    <li class="list-item"><a class="list-item-anchor" href="">about</a><span class="list-item-span"></span>
+                    
+                        <div class="sub-menu">
+                            <div class="indicator"><div class="indicator-arrow"></div></div>
+                            <ul class="sub-menu-list">
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">certificates</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">potfolio</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">knowledgments</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">schooling</a></li>
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">resume</a></li>
+                            </ul>
+                        </div>
+                        
+                    </li>
+                    <li class="list-item"><a class="list-item-anchor" href="">contact</a><span class="list-item-span"></span></li>
+                    <li class="list-item"><a class="list-item-anchor" href="">references</a><span class="list-item-span"></span>
+                        <div class="sub-menu">
+                            <div class="indicator"><div class="indicator-arrow"></div></div>
+                            <ul class="sub-menu-list">
+                                <li class="sub-menu-list-items"><a class="sub-menu-list-items-anchor" href="">Uzbekneftegas company</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    {{#if isAuthenticated}}
+                    <li class="list-item"><a class="list-item-anchor" href="/users/profile">Profile</a><span class="list-item-span"></span></li>
+                    <li class="list-item"><a class="list-item-anchor" href="/users/dashboard">Dashboard</a><span class="list-item-span"></span></li>
+                    <li class="list-item"><a class="list-item-anchor" href="/users/logout">Log out</a><span class="list-item-span"></span></li>
+                    {{else}}
+                    <li class="list-item"><a class="list-item-anchor" href="/users/register">Sign up</a><span class="list-item-span"></span></li>
+                    <li class="list-item"><a class="list-item-anchor" href="/users/login">Log in</a><span class="list-item-span"></span></li>
+                    {{/if}}
+                </ul>
+                <div class="polylang">
+                    
+                </div>
+            </nav>
+        </div>
+    
+        <div class="container space-c mt-6 pt-2">
+            <h1>the best services for your business</h1>
+        </div>
+        <div class="container space-c mt-1">
+            <h3>i am Web Developer, Data scientist, Cybersecurist offering my certified and qualitative services</h3>
+        </div>  
+        <div class="container space-c">
+            <a class="catalogue-btn mt-2" href="">Catalogue</a>
+        </div>      
+    </section>
