--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,38 @@
-<!-- Jumbotron -->
-<div class="jumbotron">
-  <h1>Secret Page!</h1>
-  <p class="lead">Only logged in users should be see this.</p>
-  <p class="lead">Username: {{username}}</p>
-</div>
+<section id="section-2" class="section-2">
+        <div class="container">
+            <div class="block space-b">
+                <div class="card">
+                    <img class="card-img" src="https://futureskillsprime.in/sites/default/files/inline-images/iStock-966248982.jpg" alt="">
+                    <p class="card-article mt-1">Artificial Intelligence</p>
+                    <p class="card-topic mt-1">I created dozens of robotics an they are used in varius companies. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, magni aperiam.</p>
+                    <div class="space-c mt-2"><a href="" class=" more">more <i class="fa-solid fa-angles-right"></i></a></div>
+                </div>
+                <div class="card">
+                    <img class="card-img" src="https://futureskillsprime.in/sites/default/files/inline-images/iStock-966248982.jpg" alt="">
+                    <p class="card-article mt-1">Artificial Intelligence</p>
+                    <p class="card-topic mt-1">I created dozens of robotics an they are used in varius companies. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, magni aperiam.</p>
+                    <div class="space-c mt-2"><a href="" class=" more">more <i class="fa-solid fa-angles-right"></i></a></div>
+                </div>
+                <div class="card">
+                    <img class="card-img" src="https://futureskillsprime.in/sites/default/files/inline-images/iStock-966248982.jpg " alt="">
+                    <p class="card-article mt-1">Cybersecurity</p>
+                    <p class="card-topic mt-1">I created dozens of robotics an they are used in varius companies. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, magni aperiam.</p>
+                    <div class="space-c mt-2"><a href="" class="more">more <i class="fa-solid fa-angles-right"></i></a></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="section-3" class="section-3">
+        <div class="container space-c">
+            <h1 class="mt-3 heading-1">My privilege <span class="bottom-border"></span></h1>
+        </div>
+    </section>
+
+    <section id="section-4" class="section-4">
+
+    </section>
+    
+    <section id="map-section" class="map-section">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d572.824958329245!2d69.29042167648069!3d41.360544056129264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1654401439976!5m2!1sen!2s" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
