--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -2,30 +2,32 @@
 <html>
   <head>
     <title>Fullstack developer</title>
-    <link rel="stylesheet" 
+    {{!-- <link rel="stylesheet" 
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
           crossorigin="anonymous">
     <link rel="stylesheet" 
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" 
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" 
-          crossorigin="anonymous">
-    <link rel="stylesheet" 
-          href="/css/style.css">
-    <script src="//code.jivosite.com/widget/mDEkg7lmkY" async></script>
+          crossorigin="anonymous"> --}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
+    {{!-- <script src="//code.jivosite.com/widget/mDEkg7lmkY" async></script> --}}
   </head>
   <body>
-    {{#if success_messages }}
-      <div class="alert alert-success">{{success_messages}}</div>
-    {{/if}}
-    {{#if error_messages }}
-      <div class="alert alert-danger">{{error_messages}}</div>
-    {{/if}}
-    <div class="container">
       {{> navbar}}
+    <section class="window-alert">
+      {{#if success_messages }}
+      <div class="alert alert-success">{{success_messages}}</div>
+      {{/if}}
+      {{#if error_messages }}
+        <div class="alert alert-danger">{{error_messages}}</div>
+      {{/if}}
+    </section>
+
       {{{body}}}
       {{> footer}}
-    </div>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
