--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,15 @@
-<form class="form-signin" action="/users/login" method="POST">
-  <h2 class="form-signin-heading">Please login in</h2>
+<section class="sign-up">
+  <form class="form-signin" action="/users/login" method="POST">
+    <h2 class="form-signin-heading">Please login in</h2>
 
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required autofocus>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" id="inputEmail" name="email" class="form-control input" placeholder="Email address" required autofocus>
 
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" name="password" class="form-control input" placeholder="Password" required>
 
-  <br/>
-  
-  <button class="btn btn-lg btn-default btn-block" type="submit">Log in</button>
-</form>
+    <br/>
+    
+    <button class="btn btn-lg btn-default btn-block" type="submit">Log in</button>
+  </form>
+</section>
