--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,19 +1,42 @@
-<form class="form-signin" action="/users/register" method="POST">
-  <h2 class="form-signin-heading">Please sign up</h2>
+{{!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Muzaffar</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+    {{#if success_messages }}
+      <div class="alert alert-success">{{success_messages}}</div>
+    {{/if}}
+    {{#if error_messages }}
+      <div class="alert alert-danger">{{error_messages}}</div>
+    {{/if}} --}}
 
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required autofocus>
+<section class="sign-up">
+  <form class="form-signin" action="/users/register" method="POST">
+    <h2 class="form-signin-heading">Please sign up</h2>
 
-  <label for="inputUsername" class="sr-only">Username</label>
-  <input type="text" id="inputUsername" name="username" class="form-control" placeholder="Username" required>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" id="inputEmail" name="email" class="form-control input" placeholder="Email address" required autofocus>
 
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+    <label for="inputUsername" class="sr-only">Username</label>
+    <input type="text" id="inputUsername" name="username" class="form-control input" placeholder="Username" required>
 
-  <label for="inputConfirmPassword" class="sr-only">Confirm Password</label>
-  <input type="password" id="inputConfirmPassword" name="confirmationPassword" class="form-control" placeholder="Confirm Password" required>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" name="password" class="form-control input" placeholder="Password" required>
 
-  <br/>
+    <label for="inputConfirmPassword" class="sr-only">Confirm Password</label>
+    <input type="password" id="inputConfirmPassword" name="confirmationPassword" class="form-control input" placeholder="Confirm Password" required>
 
-  <button class="btn btn-lg btn-default btn-block" type="submit">Sign up</button>
-</form>
+    <br/>
+
+    <button class="btn btn-lg btn-default btn-block" type="submit">Sign up</button>
+  </form>
+</section>
+{{!-- </body>
+</html> --}}
