--- a/views/verify.handlebars
+++ b/views/verify.handlebars
@@ -1,8 +1,10 @@
-<form class="form-signin" action="/users/verify" method="POST">
-  <h2 class="form-signin-heading">Verify Your Email</h2>
+<section class="sign-up">
+  <form class="form-signin" action="/users/verify" method="POST">
+    <h2 class="form-signin-heading">Verify Your Email</h2>
 
-  <label for="secretToken" class="sr-only">Secret Token</label>
-  <input type="text" id="secretToken" name="secretToken" class="form-control" placeholder="Secret Token" required autofocus>
-  <br/>
-  <button class="btn btn-lg btn-default btn-block" type="submit">Verify</button>
-</form>
+    <label for="secretToken" class="sr-only">Secret Token</label>
+    <input type="text" id="secretToken" name="secretToken" class="form-control input" placeholder="Secret Token" required autofocus>
+    <br/>
+    <button class="btn btn-lg btn-default btn-block" type="submit">Verify</button>
+  </form>
+</section>
